--- a/front/angular.json
+++ b/front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Avril": {
+    "Beaver": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Avril",
+            "outputPath": "dist/Beaver",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Avril:build"
+            "browserTarget": "Beaver:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Avril:build:production"
+              "browserTarget": "Beaver:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Avril:build"
+            "browserTarget": "Beaver:build"
           }
         },
         "test": {
@@ -109,7 +109,7 @@
         }
       }
     },
-    "Avril-e2e": {
+    "Beaver-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -118,11 +118,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Avril:serve"
+            "devServerTarget": "Beaver:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Avril:serve:production"
+              "devServerTarget": "Beaver:serve:production"
             }
           }
         },
@@ -138,5 +138,5 @@
       }
     }
   },
-  "defaultProject": "Avril"
+  "defaultProject": "Beaver"
 }
