--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
     "lodash": "^4.17.15",
     "mysql": "^2.17.1",
