--- a/client/angular.json
+++ b/client/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Beaver:build"
+            "browserTarget": "Beaver:build",
+            "proxyConfig": "src/proxy.config.js"
           },
           "configurations": {
             "production": {
