--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
@@ -28,6 +30,9 @@
     "class-validator": "^0.10.1",
     "lodash": "^4.17.15",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
@@ -40,6 +45,8 @@
     "@types/jest": "24.0.11",
     "@types/lodash": "^4.14.141",
     "@types/node": "11.13.4",
+    "@types/passport-jwt": "^3.0.2",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
     "prettier": "1.17.0",
