--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.15",
+    "ngx-markdown": "^8.2.1",
     "ngx-spinner": "7.2.0",
     "ngx-toastr": "10.1.0",
     "rxjs": "~6.3.3",
