--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
-    "@ngxs/store": "^3.6.2",
     "lodash": "^4.17.15",
+    "ng-click-outside": "^6.0.0",
     "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^12.0.0",
     "rxjs": "~6.5.4",
