#15 Fix pm2 start setting

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
     "start:prod": "node dist/main.js",
-    "deploy": "npm run build && pm2 start start.js",
+    "deploy": "pm2 start dist/main.js --name \"Beaver-server\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
