--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "deploy": "pm2 start dist/main.js --name \"Beaver-server\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -20,33 +20,35 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/jwt": "^6.1.1",
-    "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/config": "^0.2.4",
+    "@nestjs/core": "^6.11.11",
+    "@nestjs/jwt": "^6.1.2",
+    "@nestjs/passport": "^6.2.0",
+    "@nestjs/platform-express": "^6.11.11",
     "@nestjs/swagger": "^3.1.0",
-    "@nestjs/typeorm": "^6.1.3",
+    "@nestjs/typeorm": "^6.3.3",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.1",
+    "class-validator": "^0.10.2",
     "lodash": "^4.17.15",
-    "mysql": "^2.17.1",
-    "passport": "^0.4.0",
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "swagger-ui-express": "^4.1.1",
-    "typeorm": "^0.2.19"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/cli": "^6.14.2",
+    "@nestjs/testing": "^6.11.11",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
-    "@types/lodash": "^4.14.141",
+    "@types/lodash": "^4.14.149",
     "@types/node": "11.13.4",
-    "@types/passport-jwt": "^3.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
