--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/main",
     "deploy": "pm2 start dist/main.js --name \"Beaver-server\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
