--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot=true",
+    "start": "ng serve",
     "build": "ng build --output-path dist/client",
     "test": "ng test",
     "lint": "ng lint",
